--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 	<title>Móveis Ecológicos</title>
 	<link rel="stylesheet" href="estilos.css">
 </head> 
-<body> 
+<body onload="trocaBanner();"> 
 	<h1>Móveis Ecológicos S. A.</h1> 
 	<ul> 
 		<li>Móveis de garrafas PET</li>
 		<li>Móveis de latinhas de alumínio</li>
 		<li>Móveis de papelão</li>	
-	</ul> 
+	</ul>
 </body> 
 </html>
