agora vai subirgit status!

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Móveis Ecológicos</title>
 	<link rel="stylesheet" href="estilos.css">
 </head> 
-<body onload="trocaBanner();"> 
+<body onload="trocaBanner(1200);"> 
 	<h1>Móveis Ecológicos S. A.</h1> 
 	<ul> 
 		<li>Móveis de garrafas PET</li>
